[package]
name = 'linkorgsonnx'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'linkorgsonnx'

[dependencies]
extendr-api = {version='*'}
ort = {version = "2.0.0-rc.5", features = [ "fetch-models" ] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
ndarray = "0.16"
tokenizers = { version = ">=0.13.4", default-features = false, features = [ "onig" ] }
rand = "0.8"
